# seconohe

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  mypy.ini  pyproject.toml  requirements-dev.txt
.github/workflows/: pre-commit.yml  publish-docs.yml  python-publish.yml
src/seconohe/: __init__.py  _ansi.py  affce.py  apply_mask.py  bti.py  color.py  comfy_node_action.py  comfy_notification.py  config.py  downloader.py  logger.py  misc.py  ops.py  register_nodes.py  tensor.py  torch.py
src/seconohe/foreground_estimation/: affce.py  fmlfe.py  fmlfe_cupy.py  fmlfe_numba.py  fmlfe_pyopencl.py  fmlfe_torch.py
src/seconohe/js/: node_change.js  toast_handler.js
tool/: build_docs.py
