[project]
name = "seconohe"
version = "0.1.0"
authors = [
    { name="Salvador E. Tropea", email="stropea@inti.gob.ar" },
]
description = "SET ComfyUI Node Helpers"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]
dependencies = [
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
]
better_dl = ["requests"]
better_color = ["colorama"]


# #######################################
# Flake8
# #######################################
[tool.flake8]
max-line-length = 127
# extend-ignore = "E203, W503"
# Add plugins if you installed them via additional_dependencies:
# select = C,E,F,W,B,B950  # Example: using flake8-bugbear (B, B950)
# docstring-convention = google
# ... other flake8 or plugin settings


# #######################################
# MyPy (well, yours, useless hinting)
# #######################################
[tool.mypy]
# Basic configuration
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
mypy_path = "src/"

# This is often needed when starting out, especially with libraries that lack stubs
ignore_missing_imports = true

# You can get stricter over time by removing ignore_missing_imports
# and setting flags like these:
# disallow_untyped_defs = true
# disallow_any_unimported = true

# Tell mypy to ignore errors from third-party libraries if they are not typed
[[tool.mypy.overrides]]
module = "torch.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "torchaudio.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pytest.*"
ignore_missing_imports = true
